--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,14 @@ repositories {
     mavenCentral()
 }
 
-def allureVersion = "2.21.0",
-    selenideVersion = "6.19.1"
+def slf4jVersion = "2.0.9",
+    junitVersion = "5.10.1",
+    selenideVersion = "6.19.1",
+    javafakerVersion = "1.0.2",
+    jschVersion = "0.1.55",
+    allureVersion = "2.24.0",
+    ownerVersion = "1.0.12",
+    webdrivermanagerVersion = "5.6.2"
 
 allure {
     report {
@@ -33,11 +39,16 @@ compileTestJava {
 
 dependencies {
     testImplementation(
+            "org.junit.jupiter:junit-jupiter:$junitVersion",
             "com.codeborne:selenide:$selenideVersion",
+            "com.github.javafaker:javafaker:$javafakerVersion",
+            "com.jcraft:jsch:$jschVersion",
+            "org.slf4j:slf4j-simple:$slf4jVersion",
             "io.qameta.allure:allure-selenide:$allureVersion",
-            "org.junit.jupiter:junit-jupiter:5.10.0",
-            'org.slf4j:slf4j-simple:2.0.7'
-    )
+            "org.aeonbits.owner:owner:$ownerVersion",
+            "io.github.bonigarcia:webdrivermanager:$webdrivermanagerVersion")
+    testRuntimeOnly (
+            "org.slf4j:slf4j-simple:$slf4jVersion")
 }
 
 tasks.withType(Test) {
@@ -49,22 +60,5 @@ tasks.withType(Test) {
             events "started", "skipped", "failed", "standard_error", "standard_out"
             exceptionFormat "short"
         }
-    }
-}
-
-task regress_test(type: Test) {
-    useJUnitPlatform {
-        includeTags("regress")
-    }
-}
-
-task smoke_test(type: Test) {
-    useJUnitPlatform {
-        includeTags("smoke")
-    }
-}
-
-task full_test(type: Test) {
-    useJUnitPlatform {
     }
 }
